Add new files for checkout page and thankyou page update interfaces

--- a/eshop-frontend/apps/admin/.eslintrc.json
+++ b/eshop-frontend/apps/admin/.eslintrc.json
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "eshop-frontend",
+            "prefix": "admin",
             "style": "kebab-case"
           }
         ]
