--- a/eshop-frontend/libs/users/.eslintrc.json
+++ b/eshop-frontend/libs/users/.eslintrc.json
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "eshop-frontend",
+            "prefix": "",
             "style": "kebab-case"
           }
         ]
